--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,17 +16,12 @@ pipeline{
 		}
 		stage("Maven Build"){
 			steps{
-			    sh '''cd /root/.jenkins/workspace/demo_pipeline/TCS'''
+			    sh "cd /root/.jenkins/workspace/demo_pipeline/TCS"
 			    sh "ls"
 			}}
 		stage("Maven Build1"){
-			steps {
-          			sh "$PWD"
-          			dir('TCS'){
-          			 sh "$PWD"
-          }
-          			sh "$PWD"
-				  sh "mvn clean install"
+			steps {	
+			  sh "mvn clean install"
         } 
 		}
 	}}
