--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,6 +32,7 @@ pipeline{
 		stage("Maven Deploy"){
 			steps {	
 			  sh '''
+			  	pwd
        				scp target/myweb.jar root@192.168.40.140:/opt/tomcat8/webapps/
 				ssh root@192.168.40.140 /opt/tomcat8/bin/shutdown.sh
 				ssh root@192.168.40.140 /opt/tomcat8/bin/startup.sh
