--- a/jenkinsfile
+++ b/jenkinsfile
@@ -33,7 +33,7 @@ pipeline{
 			steps {	
 			  sh '''
 			  	pwd
-				cd /TCS
+				cd TCS/
        				scp target/myweb.jar root@192.168.40.140:/opt/tomcat8/webapps/
 				ssh root@192.168.40.140 /opt/tomcat8/bin/shutdown.sh
 				ssh root@192.168.40.140 /opt/tomcat8/bin/startup.sh
